Update Instegram name

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             ><i class="fab fa-youtube fa-2x fa-fw"></i
           ></a>
           <a
-            href="https://www.instagram.com/youssefr._kamel?r=nametag"
+            href="https://www.instagram.com/youssef.r.kamel?r=nametag"
             target="_blank"
             ><i class="fab fa-instagram fa-2x fa-fw"></i
           ></a>
