[feat]: add food app project

--- a/index.html
+++ b/index.html
@@ -328,6 +328,29 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="card" data-aos="zoom-in">
+              <h4>Food App</h4>
+              <a href="https://food-app-red-kappa-23.vercel.app/auth/login" target="_blank"
+                ><img src="./images/projects/FoodApp-screen.png" alt=""
+              /></a>
+              <div class="links d-flex justify-content-between m-3">
+                <a
+                  href="https://food-app-red-kappa-23.vercel.app/auth/login"
+                  class="btn btn-primary text-capitalize"
+                  target="_blank"
+                  >live demo</a
+                >
+                <a
+                  href="https://github.com/YOUSSEF-R-KAMEL/food-app"
+                  class="btn btn-dark text-capitalize"
+                  target="_blank"
+                  >source code</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card" data-aos="zoom-in">
               <h4>Testy Food</h4>
               <a href="https://tasty-pastries.vercel.app/" target="_blank"
                 ><img src="./images/projects/testy_food.png" alt=""
