[feat]: edit images folder structure

--- a/index.html
+++ b/index.html
@@ -273,47 +273,53 @@
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
-              <img src="./images/certi_01.png" alt="" />
+              <img src="./images/certificate/certi_01.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_02.png" alt="" />
+              <img src="./images/certificate/certi_02.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_03.png" alt="" />
+              <img src="./images/certificate/certi_03.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_04.png" alt="" />
+              <img src="./images/certificate/certi_04.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_05.png" alt="" />
+              <img src="./images/certificate/certi_05.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_06.png" alt="" />
+              <img src="./images/certificate/certi_06.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_07.png" alt="" />
+              <img src="./images/certificate/certi_07.png" alt="" />
+            </div>
+                        <div class="slide">
+              <img src="./images/certificate/certi_08.png" alt="" />
             </div>
 
             <div class="slide">
-              <img src="./images/certi_01.png" alt="" />
+              <img src="./images/certificate/certi_01.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_02.png" alt="" />
+              <img src="./images/certificate/certi_02.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_03.png" alt="" />
+              <img src="./images/certificate/certi_03.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_04.png" alt="" />
+              <img src="./images/certificate/certi_04.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_05.png" alt="" />
+              <img src="./images/certificate/certi_05.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_06.png" alt="" />
+              <img src="./images/certificate/certi_06.png" alt="" />
             </div>
             <div class="slide">
-              <img src="./images/certi_07.png" alt="" />
+              <img src="./images/certificate/certi_07.png" alt="" />
+            </div>
+                        <div class="slide">
+              <img src="./images/certificate/certi_08.png" alt="" />
             </div>
           </div>
         </div>
@@ -328,9 +334,32 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="card" data-aos="zoom-in">
+              <h4>Project Management System</h4>
+              <a href="https://project-management-system-flax.vercel.app/#/auth/login" target="_blank"
+                ><img src="./images/projects/pms.png" alt=""
+              /></a>
+              <div class="links d-flex justify-content-between m-3">
+                <a
+                  href="https://project-management-system-flax.vercel.app/#/auth/login"
+                  class="btn btn-primary text-capitalize"
+                  target="_blank"
+                  >live demo</a
+                >
+                <a
+                  href="https://github.com/YOUSSEF-R-KAMEL/project-management-system"
+                  class="btn btn-dark text-capitalize"
+                  target="_blank"
+                  >source code</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card" data-aos="zoom-in">
               <h4>Food App</h4>
               <a href="https://food-app-red-kappa-23.vercel.app/auth/login" target="_blank"
-                ><img src="./images/projects/FoodApp-screen.png" alt=""
+                ><img src="./images/projects/food-app.png" alt=""
               /></a>
               <div class="links d-flex justify-content-between m-3">
                 <a
