[feat]: add ecommerce fast store

--- a/index.html
+++ b/index.html
@@ -334,6 +334,28 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="card" data-aos="zoom-in">
+              <h4>Ecommerce Fast Store</h4>
+              <a href="https://e-commerce-fast-store.vercel.app/login" target="_blank"
+                ><img src="./images/projects/ecommerce_fast_store.png" alt=""
+              /></a>
+              <div class="links d-flex justify-content-between m-3">
+                <a
+                  href="https://e-commerce-fast-store.vercel.app/login"
+                  class="btn btn-primary text-capitalize"
+                  target="_blank"
+                  >live demo</a
+                >
+                <a
+                  href="https://github.com/YOUSSEF-R-KAMEL/eCommerce-Fast-Store"
+                  class="btn btn-dark text-capitalize"
+                  target="_blank"
+                  >source code</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="card" data-aos="zoom-in">
               <h4>Project Management System</h4>
               <a href="https://project-management-system-zeta.vercel.app/#/auth/login" target="_blank"
                 ><img src="./images/projects/pms.png" alt=""
